# mate-applet-livescore

./: ChangeLog  Makefile.am  README  TODO  TRANSLATIONS  autogen.sh  configure.ac  mate-applet-livescore.spec.in
feed-enetpulse/: Makefile.am  feed_enetpulse.c  feed_enetpulse.h
feed-iddaa/: Makefile.am  feed_iddaa.c  feed_iddaa.h
feed-omnibet/: Makefile.am  feed_omnibet.c  feed_omnibet.h
feed-omnibet2/: Makefile.am  feed_omnibet2.c  feed_omnibet2.h
images/: Makefile.am  livescore-64.xcf  points.xcf
po/: bg_BG.po  en_BG.po  en_GB.po  en_US.po  livescore.pot  ru_RU.po
src/: LivescoreAppletFactory.server  Makefile.am  _main.c  applet.h  feed_iddaa.c  feed_iddaa.h  fifo.c  gui.c  http.c  http.h  main.c  manager.c  menu.c  org.mate.applets.LivescoreApplet.mate-panel-applet.in  org.mate.panel.applet.LivescoreApplet.gschema.xml.in  org.mate.panel.applet.LivescoreApplet.service.in  util.c
